--- a/Lab_3/semanticLayout.css
+++ b/Lab_3/semanticLayout.css
@@ -11,20 +11,17 @@ div.TitleBox {
   /* border : 5px solid red; */
   background-color: #1D2475;
 }
+div.ThreeBox {
+  float: left;
+}
 div.LinkBox {
   background-color: #3366CC;
   border: 4px solid black;
   border-radius: 15px;
   float: left;
   width: 150px;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
 }
-div.ThreeBox {
-  margin-left: 180px;
-}
-div.InLine{   /* linkbox + threebox */
+div.InLine{
   overflow: hidden;
 }
 div.OutLine {
@@ -64,7 +61,4 @@ body{
 h2.highlight {
   display: inline;
   background-color: #A6CE39;
-}
-p.Align {
-  text-align: justify;
 }
