--- a/Lab_3/layout.css
+++ b/Lab_3/layout.css
@@ -61,10 +61,9 @@ body{
 #LinkTitle {
   color: #CCCCCC;
 }
-h2.highlight {
-  display: inline;
-  background-color: #A6CE39;
-}
 p.Align {
   text-align: justify;
+}
+* * * * *:hover{
+  background-color: #A6CE39;
 }
